--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -32,6 +32,9 @@
                 {% else %}
                 <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
                 {% endif %}
+                {% if perms.catalog.can_mark_returned %}
+                <li><a href="{% url 'all-borrowed' %}">All Books borrowed</a></li>
+                {% endif %}
             </ul>
             {% endblock %}
         </div>
