--- a/catalog/templates/catalog/all_borrowed_books.html
+++ b/catalog/templates/catalog/all_borrowed_books.html
@@ -7,7 +7,7 @@
     <ul>
 
       {% for bookinst in bookinstance_list %}
-      <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
+      <li class="text-warning">
         <a href="{% url 'book-detail' bookinst.book.pk %}">{{bookinst.book.title}}</a> ({{ bookinst.due_back }})
       </li>
       {% endfor %}
